Fixed vertical alignment issue for buttons in fluent-grid

--- a/src/CodeBreaker.Blazor/wwwroot/css/app.css
+++ b/src/CodeBreaker.Blazor/wwwroot/css/app.css
@@ -101,6 +101,10 @@ html, body, #app {
     flex: 1;
 }
 
+.align-items-end .fluent-grid {
+    align-items: flex-end;
+}
+
 .justify-between {
     justify-content: space-between;
 }
